--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "private": true,
   "name": "@nfreear/nick-bot",
-  "version": "1.0.0",
+  "version": "0.8.0-alpha",
   "description": "An experimental Chat-bot, built on `NLP.js`",
   "X-source": "https://github.com/jesus-seijas-sp/nlpjs-examples/tree/master/01.quickstart/08.webchat",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "fix": "semistandard --fix",
     "test": "semistandard",
     "x-test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "NDF",
+  "author": "Nick Freear",
   "license": "?",
   "dependencies": {
     "@nlpjs/basic": "^4.0.1",
     "@nlpjs/directline-connector": "^4.0.1",
     "@nlpjs/express-api-server": "^4.0.1",
     "@nlpjs/lang-es": "^4.0.1",
-    "@nlpjs/ner": "^4.1.0",
-    "dotenv": "^8.2.0"
+    "@nlpjs/ner": "^4.1.0"
   },
   "devDependencies": {
     "semistandard": "^14.2.0"
+  },
+  "peerDependencies": {
+    "botframework-webchat-root": "https://github.com/microsoft/BotFramework-WebChat.git#v4.7.1",
+    "dotenv": "^8.2.0"
   }
 }
