--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   },
   "author": "Nick Freear",
   "license": "?",
+  "repository": "https://github.com/nfreear/nick-bot.git",
   "dependencies": {
-    "@nlpjs/basic": "^4.0.1",
-    "@nlpjs/directline-connector": "^4.0.1",
-    "@nlpjs/express-api-server": "^4.0.1",
-    "@nlpjs/lang-es": "^4.0.1",
-    "@nlpjs/ner": "^4.1.0"
+    "@nlpjs/basic": "^4.1.4",
+    "@nlpjs/directline-connector": "^4.1.4",
+    "@nlpjs/express-api-server": "^4.1.4",
+    "@nlpjs/lang-es": "^4.1.4",
+    "@nlpjs/ner": "^4.1.4"
   },
   "devDependencies": {
     "semistandard": "^14.2.0"
