--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "fix": "semistandard --fix",
+    "frontend": "live-server --port=3001 --no-browser --watch=public",
+    "fix": "semistandard --fix public/*.js",
     "test": "semistandard",
     "x-test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,10 +23,10 @@
     "@nlpjs/ner": "^4.1.4"
   },
   "devDependencies": {
+    "live-server": "^1.2.1",
     "semistandard": "^14.2.0"
   },
   "peerDependencies": {
-    "botframework-webchat-root": "https://github.com/microsoft/BotFramework-WebChat.git#v4.7.1",
-    "dotenv": "^8.2.0"
+    "botframework-webchat-root": "https://github.com/microsoft/BotFramework-WebChat.git#v4.7.1"
   }
 }
