--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node index.js",
     "frontend": "live-server --port=3001 --no-browser --watch=public",
     "fix": "semistandard --fix public/*.js",
+    "vox:list": "say -v ? | grep en_",
     "test": "semistandard",
     "x-test": "echo \"Error: no test specified\" && exit 1"
   },
