--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node index.js",
     "frontend": "live-server --port=3001 --no-browser --watch=public",
-    "fix": "semistandard --fix public/*.js",
+    "lint:fix": "semistandard --fix",
     "vox:list": "say -v ? | grep en_",
     "test": "semistandard",
     "x-test": "echo \"Error: no test specified\" && exit 1"
