--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "frontend": "live-server --port=3001 --no-browser --watch=public",
+    "frontend": "live-server --port=3001 --no-browser --watch=public --open='/public/'",
+    "frontend:zh": "live-server --port=3001 --watch=public --open='/public/?lang=zh-CN'",
     "lint:fix": "semistandard --fix",
-    "vox:list": "say -v ? | grep en_",
+    "vox:list": "say -v ? | egrep '(en|zh)_'",
     "test": "semistandard"
   },
   "author": "Nick Freear",
@@ -20,6 +21,7 @@
     "@nlpjs/directline-connector": "^4.1.4",
     "@nlpjs/express-api-server": "^4.1.4",
     "@nlpjs/lang-es": "^4.1.4",
+    "@nlpjs/lang-zh": "^4.2.1",
     "@nlpjs/ner": "^4.1.4",
     "xregexp": "^4.3.0"
   },
