--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "frontend:zh": "live-server --port=3001 --watch=public --open='/public/?lang=zh-CN'",
     "grep:nlpjs": "grep -n '@nlpjs/' package.json",
     "lint:fix": "semistandard --fix",
-    "vox:list": "say -v ? | egrep '(en|zh)_'",
+    "vox:list": "say -v ? | egrep '(en|zh)[_-]'",
     "test": "semistandard"
   },
   "author": "Nick Freear",
@@ -24,6 +24,7 @@
     "@nlpjs/express-api-server": "^4.2.0",
     "@nlpjs/lang-zh": "^4.2.1",
     "@nlpjs/ner": "^4.1.4",
+    "express-mung": "^0.5.1",
     "xregexp": "^4.3.0"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "semistandard": "^14.2.0"
   },
   "peerDependencies": {
-    "botframework-webchat-root": "https://github.com/microsoft/BotFramework-WebChat.git#v4.7.1"
+    "express-mung": "^0.5.1",
+    "botframework-webchat-root": "https://github.com/microsoft/BotFramework-WebChat.git#v4.8.0"
   }
 }
