--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "nick-bot",
   "version": "0.8.1",
-  "description": "An experimental Chat-bot, built on `NLP.js`",
+  "description": "An experimental Virtual assistant / Chat-bot, built on `NLP.js`",
   "license": "GPL-3.0+",
   "X-source": "https://github.com/jesus-seijas-sp/nlpjs-examples/tree/master/01.quickstart/08.webchat",
   "main": "./index.js",
