Bug #4, minor edits for IoT plugin

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 
-# Internet of things plugin.
-TP_LINK_USER=__EDIT_ME__
-TP_LINK_PASS=__EDIT_ME__
-IOT_DEVICE_ALIAS=__EDIT_ME__
+# Internet of Things plugin.
+TP_LINK_USER=jo@example.org__EDIT_ME__
+TP_LINK_PASS=xxxx__EDIT_ME__
+IOT_DEVICE_ALIAS=Plug-01__EDIT_ME__
 
 DOT_ENV_TEST=2
+
+# End.
