Bug #6, Glitch Node.js hosting ~ fix compatibility

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 
+# Optionally enable experimental features!
+# IOT_ENABLE=true
+# AUTH_ENABLE=true
+# DIFF_ENABLE=true
+
 # Internet of Things plugin.
 TP_LINK_USER=jo@example.org__EDIT_ME__
 TP_LINK_PASS=xxxx__EDIT_ME__
