--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "license": "GPL-3.0+",
   "X-source": "https://github.com/jesus-seijas-sp/nlpjs-examples/tree/master/01.quickstart/08.webchat",
   "main": "./index.js",
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
+    "local": "node index.js --local",
     "start": "node index.js",
     "frontend": "live-server --port=3001 --no-browser --watch=public --open='/public/?speech=cbf'",
     "frontend:zh": "live-server --port=3001 --watch=public --open='/public/?lang=zh-CN'",
@@ -14,6 +18,7 @@
     "lint:json": "node test/json-lint.js",
     "fix:js": "semistandard --fix",
     "vox:list": "say -v ? | egrep '(en|zh)[_-]'",
+    "g:diff": "git diff 373668c6 > ./.data/glitch.diff",
     "test": "npm run lint:json && semistandard"
   },
   "author": "Nick Freear",
