--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": "12.x"
   },
   "scripts": {
-    "local": "node index.js --local",
+    "start:gc": "node --expose-gc index.js",
     "start": "node index.js",
     "frontend": "live-server --port=3001 --no-browser --watch=public --open='/public/?speech=cbf'",
     "frontend:zh": "live-server --port=3001 --watch=public --open='/public/?lang=zh-CN'",
